[gd_scene format=3 uid="uid://he0yxx4kvwf8"]

[ext_resource type="Script" uid="uid://s8svpwy1hp16" path="res://src/player/player.gd" id="1_244u8"]
[ext_resource type="Script" uid="uid://qdle56qsaa0m" path="res://src/player/appearance_component.gd" id="2_6bm8s"]
[ext_resource type="Script" uid="uid://mx4knjju7yh2" path="res://src/player/inventory.gd" id="2_jiejy"]
[ext_resource type="Texture2D" uid="uid://0kptybv11861" path="res://assets/tools/pickaxe_copper.png" id="3_jiejy"]
[ext_resource type="Script" uid="uid://couw105c3bde4" path="res://addons/godot_state_charts/state_chart.gd" id="3_l271a"]
[ext_resource type="Texture2D" uid="uid://bftthcxjesk14" path="res://assets/player/player2.0/Player.png" id="4_6bm8s"]
[ext_resource type="Script" uid="uid://c1vp0ojjvaby1" path="res://addons/godot_state_charts/parallel_state.gd" id="4_8ydov"]
[ext_resource type="Texture2D" uid="uid://bvg2swvyynoqa" path="res://assets/player/new_player/player_arm.png" id="5_x42xx"]
[ext_resource type="Script" uid="uid://cytafq8i1y8qm" path="res://addons/godot_state_charts/atomic_state.gd" id="5_ylhto"]
[ext_resource type="Script" uid="uid://jk2jm1g6q853" path="res://addons/godot_state_charts/compound_state.gd" id="8_8ydov"]
[ext_resource type="Script" uid="uid://chrub5vjyvxse" path="res://src/player/throw_state.gd" id="8_rl62b"]
[ext_resource type="Script" uid="uid://c2k3jd0o85prn" path="res://src/player/grapple_state.gd" id="9_wlj80"]
[ext_resource type="Script" uid="uid://bykwy1atf1rwq" path="res://src/player/mining_state.gd" id="10_wlj80"]
[ext_resource type="Script" uid="uid://cf1nsco3w0mf6" path="res://addons/godot_state_charts/transition.gd" id="10_ylhto"]
[ext_resource type="Script" uid="uid://dlyjwkyqw2in7" path="res://src/player/walking_state.gd" id="11_cwolq"]
[ext_resource type="Script" uid="uid://dt1osvcuvufkg" path="res://src/player/idle_state.gd" id="12_2smqc"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ioo17"]
radius = 7.0
height = 24.0

[sub_resource type="Animation" id="Animation_o822w"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/ArmPrivot:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/ArmPrivot:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-5, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body/ArmPrivot/Pickaxe:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-1.3944885]
}

[sub_resource type="Animation" id="Animation_jiejy"]
resource_name = "swing"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/ArmPrivot:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5, 0.51, 0.7),
"transitions": PackedFloat32Array(0.9999998, 3.2490027, 1, 1, 0.9999998),
"update": 0,
"values": [0.0, -3.1175373, 0.0, 0.13613144, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/ArmPrivot:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-5, 1), Vector2(-5, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body/ArmPrivot/Pickaxe:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5, 0.7),
"transitions": PackedFloat32Array(1, 0.68302035, 1, 0.9999998),
"update": 0,
"values": [-1.3944885, 1.0025936, 1.0088003, -1.3944885]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_x42xx"]
_data = {
&"RESET": SubResource("Animation_o822w"),
&"swing": SubResource("Animation_jiejy")
}

[sub_resource type="Animation" id="Animation_l271a"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/PlayerSprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/ArmPrivot:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-5, 1)]
}

[sub_resource type="Animation" id="Animation_cwolq"]
resource_name = "idle"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/PlayerSprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/ArmPrivot:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(100, 100),
"update": 0,
"values": [Vector2(-5, 1), Vector2(-5, 2)]
}

[sub_resource type="Animation" id="Animation_x42xx"]
resource_name = "walk"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/PlayerSprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8ydov"]
_data = {
&"RESET": SubResource("Animation_l271a"),
&"idle": SubResource("Animation_cwolq"),
&"walk": SubResource("Animation_x42xx")
}

[node name="Player" type="CharacterBody2D" unique_id=782909572]
script = ExtResource("1_244u8")

[node name="AppearanceComponent" type="Node" parent="." unique_id=1012976256 node_paths=PackedStringArray("player", "body", "player_sprite", "arm_privot", "pickaxe", "arm_sprite", "arm_point")]
script = ExtResource("2_6bm8s")
player = NodePath("..")
body = NodePath("../Body")
player_sprite = NodePath("../Body/PlayerSprite")
arm_privot = NodePath("../Body/ArmPrivot")
pickaxe = NodePath("../Body/ArmPrivot/Pickaxe")
arm_sprite = NodePath("../Body/ArmPrivot/ArmSprite")
arm_point = NodePath("../Body/ArmPrivot/ArmSprite/ArmPoint")

[node name="Camera2D" type="Camera2D" parent="." unique_id=974911572]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=1740503958]
shape = SubResource("CapsuleShape2D_ioo17")

[node name="Inventory" type="Node" parent="." unique_id=1948701928]
script = ExtResource("2_jiejy")

[node name="Body" type="Node2D" parent="." unique_id=151346841]

[node name="PlayerSprite" type="Sprite2D" parent="Body" unique_id=2145636768]
texture = ExtResource("4_6bm8s")
hframes = 32
vframes = 32

[node name="ArmPrivot" type="Node2D" parent="Body" unique_id=271499169]
position = Vector2(-5, 1)

[node name="Pickaxe" type="Sprite2D" parent="Body/ArmPrivot" unique_id=937459952]
position = Vector2(4.019493, 1.9268627)
rotation = -1.3944885
scale = Vector2(0.9999999, 0.9999999)
texture = ExtResource("3_jiejy")
offset = Vector2(13.69586, -12.533002)

[node name="ArmSprite" type="Sprite2D" parent="Body/ArmPrivot" unique_id=619681916]
position = Vector2(0, 2.3841858e-07)
scale = Vector2(1.0000005, 1.0000005)
texture = ExtResource("5_x42xx")
offset = Vector2(0.9999995, -1.0000004)
hframes = 2

[node name="ArmPoint" type="Node2D" parent="Body/ArmPrivot/ArmSprite" unique_id=302539998]
position = Vector2(3.999998, 1.9999988)

[node name="MouseComponent" type="Node2D" parent="." unique_id=225698644]

[node name="AnimationComponent" type="Node" parent="." unique_id=265325909]

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimationComponent" unique_id=1316071334]
root_node = NodePath("../..")
libraries/ = SubResource("AnimationLibrary_x42xx")

[node name="MoveAnimationPlayer" type="AnimationPlayer" parent="AnimationComponent" unique_id=1407829113]
root_node = NodePath("../..")
libraries/ = SubResource("AnimationLibrary_8ydov")

[node name="States" type="Node" parent="." unique_id=1839121872]

[node name="WalkingState" type="Node" parent="States" unique_id=551833474 node_paths=PackedStringArray("player", "state_chart", "anim_player")]
script = ExtResource("11_cwolq")
player = NodePath("../..")
state_chart = NodePath("../../StateChart")
anim_player = NodePath("../../AnimationComponent/MoveAnimationPlayer")

[node name="IdleState" type="Node" parent="States" unique_id=950321380 node_paths=PackedStringArray("player", "state_chart")]
script = ExtResource("12_2smqc")
player = NodePath("../..")
state_chart = NodePath("../../StateChart")

[node name="ThrowState" type="Node" parent="States" unique_id=1015993809 node_paths=PackedStringArray("player", "state_chart", "anim_player", "pickaxe")]
script = ExtResource("8_rl62b")
player = NodePath("../..")
state_chart = NodePath("../../StateChart")
anim_player = NodePath("../../AnimationComponent/AnimationPlayer")
pickaxe = NodePath("../../Body/ArmPrivot/Pickaxe")

[node name="GrappleState" type="Node" parent="States" unique_id=188880841]
script = ExtResource("9_wlj80")

[node name="MiningState" type="Node" parent="States" unique_id=572519031 node_paths=PackedStringArray("player", "state_chart", "anim_player", "ray_cast_2d")]
script = ExtResource("10_wlj80")
player = NodePath("../..")
state_chart = NodePath("../../StateChart")
anim_player = NodePath("../../AnimationComponent/AnimationPlayer")
ray_cast_2d = NodePath("../../RayCast2D")

[node name="StateChart" type="Node" parent="." unique_id=949418092]
script = ExtResource("3_l271a")
metadata/_custom_type_script = "uid://couw105c3bde4"

[node name="ParallelState" type="Node" parent="StateChart" unique_id=196742557]
script = ExtResource("4_8ydov")

[node name="GenerelStates" type="Node" parent="StateChart/ParallelState" unique_id=324981518]
script = ExtResource("8_8ydov")
initial_state = NodePath("Idle_AtomicState")

[node name="Walking_AtomicState" type="Node" parent="StateChart/ParallelState/GenerelStates" unique_id=936676787]
script = ExtResource("5_ylhto")

[node name="Transition" type="Node" parent="StateChart/ParallelState/GenerelStates/Walking_AtomicState" unique_id=877652663]
script = ExtResource("10_ylhto")
to = NodePath("../../Idle_AtomicState")
event = &"_transition_to_idle"
delay_in_seconds = "0.0"

[node name="Idle_AtomicState" type="Node" parent="StateChart/ParallelState/GenerelStates" unique_id=1143691674]
script = ExtResource("5_ylhto")

[node name="Transition" type="Node" parent="StateChart/ParallelState/GenerelStates/Idle_AtomicState" unique_id=864165970]
script = ExtResource("10_ylhto")
to = NodePath("../../Walking_AtomicState")
event = &"_transition_to_walking"
delay_in_seconds = "0.0"

[node name="ToolStates" type="Node" parent="StateChart/ParallelState" unique_id=1587095990]
script = ExtResource("8_8ydov")
initial_state = NodePath("MiningState")
metadata/_custom_type_script = "uid://jk2jm1g6q853"

[node name="Grapple_AtomicState" type="Node" parent="StateChart/ParallelState/ToolStates" unique_id=1090132847]
script = ExtResource("5_ylhto")

[node name="Transition" type="Node" parent="StateChart/ParallelState/ToolStates/Grapple_AtomicState" unique_id=826007874]
script = ExtResource("10_ylhto")
to = NodePath("../../..")
event = &"_transition_normal"
delay_in_seconds = "0.0"

[node name="Throw_AtomicState" type="Node" parent="StateChart/ParallelState/ToolStates" unique_id=559903351]
script = ExtResource("5_ylhto")

[node name="Transition" type="Node" parent="StateChart/ParallelState/ToolStates/Throw_AtomicState" unique_id=1541135822]
script = ExtResource("10_ylhto")
to = NodePath("../../MiningState")
event = &"_transition_grapple"
delay_in_seconds = "0.0"

[node name="MiningState" type="Node" parent="StateChart/ParallelState/ToolStates" unique_id=1660727402]
script = ExtResource("5_ylhto")

[node name="Transition" type="Node" parent="StateChart/ParallelState/ToolStates/MiningState" unique_id=1719551036]
script = ExtResource("10_ylhto")
to = NodePath("../../Throw_AtomicState")
event = &"_transition_throwing"
delay_in_seconds = "0.0"

[node name="RayCast2D" type="RayCast2D" parent="." unique_id=591219920]
target_position = Vector2(41.48, 1)
collide_with_areas = true

[connection signal="state_entered" from="StateChart/ParallelState/GenerelStates/Walking_AtomicState" to="States/WalkingState" method="_on_walking_atomic_state_state_entered"]
[connection signal="state_exited" from="StateChart/ParallelState/GenerelStates/Walking_AtomicState" to="States/WalkingState" method="_on_walking_atomic_state_state_exited"]
[connection signal="state_input" from="StateChart/ParallelState/GenerelStates/Walking_AtomicState" to="States/WalkingState" method="_on_walking_atomic_state_state_input"]
[connection signal="state_physics_processing" from="StateChart/ParallelState/GenerelStates/Walking_AtomicState" to="States/WalkingState" method="_on_walking_atomic_state_state_physics_processing"]
[connection signal="state_entered" from="StateChart/ParallelState/GenerelStates/Idle_AtomicState" to="States/IdleState" method="_on_idle_atomic_state_state_entered"]
[connection signal="state_exited" from="StateChart/ParallelState/GenerelStates/Idle_AtomicState" to="States/IdleState" method="_on_idle_atomic_state_state_exited"]
[connection signal="state_input" from="StateChart/ParallelState/GenerelStates/Idle_AtomicState" to="States/IdleState" method="_on_idle_atomic_state_state_input"]
[connection signal="state_physics_processing" from="StateChart/ParallelState/GenerelStates/Idle_AtomicState" to="States/IdleState" method="_on_idle_atomic_state_state_physics_processing"]
[connection signal="state_entered" from="StateChart/ParallelState/ToolStates/Throw_AtomicState" to="States/ThrowState" method="_on_throw_atomic_state_state_entered"]
[connection signal="state_entered" from="StateChart/ParallelState/ToolStates/MiningState" to="States/MiningState" method="_on_mining_state_state_entered"]
[connection signal="state_exited" from="StateChart/ParallelState/ToolStates/MiningState" to="States/MiningState" method="_on_mining_state_state_exited"]
[connection signal="state_input" from="StateChart/ParallelState/ToolStates/MiningState" to="States/MiningState" method="_on_mining_state_state_input"]
